add paragriaphs and removed about us page
removed about us page from the welcome page

--- a/Welcome_page_index.html
+++ b/Welcome_page_index.html
@@ -37,26 +37,28 @@
           <figcaption></figcaption>
         </figure>
         <hgroup>
-          <h3>KeyKash</h3>
+          <h3>What is KeyKash:</h3>
           <h4></h4>
         </hgroup>
-        <p> THIS IS FILL Dear Recipient Name,
-          To get started, click placeholder text and start typing. Double-click the table cells in the footer to add your contact info (or delete the columns you don’t want).
-          Use your cover letter to show how your talent and experience will solve a problem or drive results for your future employer. For example, if you say you’re collaborative, give an example of how you used your collaboration skills at your last internship, and then show how that experience will benefit the employer.
-          It’s all about personalization. Write a cover letter that uniquely presents the real you and the future impact only you can make at the company.
+        <p> KeyKash is a startup hands-on advertising platform; looking to work with companies who are ready to take a step in a brand-new direction.
+          We believe KeyKash is the future of couponing. We understand how challenging it is to advertise.
+          Let us put your business into the hands of thousands.
         </p>
       </article>
       <article>
         <hgroup>
-          <h3> </h3>
+          <h3>About Us: </h3>
           <h4> </h4>
         </hgroup>
-        <p> THIS IS FILL Dear Recipient Name,
-          To get started, click placeholder text and start typing. Double-click the table cells in the footer to add your contact info (or delete the columns you don’t want).
-          Use your cover letter to show how your talent and experience will solve a problem or drive results for your future employer. For example, if you say you’re collaborative, give an example of how you used your collaboration skills at your last internship, and then show how that experience will benefit the employer.
-          It’s all about personalization. Write a cover letter that uniquely presents the real you and the future impact only you can make at the company.  To get started, click placeholder text and start typing. Double-click the table cells in the footer to add your contact info (or delete the columns you don’t want).
-          Use your cover letter to show how your talent and experience will solve a problem or drive results for your future employer. For example, if you say you’re collaborative, give an example of how you used your collaboration skills at your last internship, and then show how that experience will benefit the employer.
-          It’s all about personalization. Write a cover letter that uniquely presents the real you and the future impact only you can make at the company.</p>
+        <p>Katherine Santos, founder, is passionate about entrepreneurship.
+          Having started her own small business at 18 years old, she is onto her next venture of developing and creating an innovative application.
+          She is dedicated to upholding our company values and delivering the greatest possible experience to our partners.
+          She has partnered up with several very intelligent and creative website and application developers.
+          Together they have built a very innovative and unique product.
+          Kyle Stewart, lead developer is passionate about technology and has spent countless hours building and designing the software that makes KeyKash what it is.
+          In addition, Alex Cannon has been a partner to the KeyKash team from the very beginning.
+          Without each individual none of this would have been possible.
+          Our team is ready to put coupons in your hand. </p>
       </article>
     </section>
     <footer>
