--- a/Welcome_page_index.html
+++ b/Welcome_page_index.html
@@ -23,7 +23,6 @@
                   <li><a href="about_coupons.html">Coupons</a></li>
                   <li><a href="user_homepage_index.html">New User</a></li>
                   <li><a href="Login_Page_index.html">Login</a></li>
-                  <li><a href="Sign_up_page_index.html">About Us</a></li>
                   <li><a href="Contact_us_index.html">Contact</a></li>
       		</ul>
       	</div>
@@ -37,7 +36,7 @@
           <figcaption></figcaption>
         </figure>
         <hgroup>
-          <h3>What is KeyKash:</h3>
+          <h3>What is KeyKash</h3>
           <h4></h4>
         </hgroup>
         <p> KeyKash is a startup hands-on advertising platform; looking to work with companies who are ready to take a step in a brand-new direction.
@@ -47,7 +46,7 @@
       </article>
       <article>
         <hgroup>
-          <h3>About Us: </h3>
+          <h3>About Us </h3>
           <h4> </h4>
         </hgroup>
         <p>Katherine Santos, founder, is passionate about entrepreneurship.
