--- a/about_coupons.html
+++ b/about_coupons.html
@@ -23,7 +23,6 @@
             <li><a href="about_coupons.html"class="current">Coupons</a></li>
             <li><a href="user_homepage_index.html">New User</a></li>
             <li><a href="Login_Page_index.html">Login</a></li>
-            <li><a href="About_Us_Page_index.html">About Us</a></li>
             <li><a href="Contact_us_index.html">Contact</a></li>
 
       		</ul>
@@ -40,24 +39,12 @@
           <h3>Coupons</h3>
           <h4></h4>
         </hgroup>
-        <p> THIS IS FILL Dear Recipient Name,
-          To get started, click placeholder text and start typing. Double-click the table
-          cells in the footer to add your contact info (or delete the columns you don’t want).
-          Use your cover letter to show how your talent and experience will solve a problem
-          or drive results for your future employer. For example, if you say you’re collaborative,
-          give an example of how you used your collaboration skills at your last internship,
-           and then show how that experience will benefit the employer.
-          It’s all about personalization. Write a cover letter that uniquely presents the real
-           you and the future impact only you can make at the company.THIS IS FILL Dear Recipient Name,
-          To get started, click placeholder text and start typing. Double-click
-          the table cells in the footer to add your contact info (or delete the columns you don’t want).
-          Use your cover letter to show how your talent and experience will
-          solve a problem or drive results for your future employer. For example, if you say you’re collaborative, give an example of how you used your collaboration skills at your last internship, and then show how that experience will benefit the employer.
-          It’s all about personalization. Write a cover letter that uniquely
-          presents the real you and the future impact only you can make at the company.</p>
+        <p> KeyKash is a very user friendly application.
+          When you allow us access to your keyboard, you will automatically begin being notified of local deals near you.
+          Example: when you type in the word pizza on your messenger system or any other keyboard friendly application,
+          the word pizza will be highlighted to notify you that KeyKash has a coupon waiting for you to use.</p>
       </article>
-      <article><br><br></br></br>
-
+      <article>
       </article>
     </section>
     <footer>
