--- a/user_homepage_index.html
+++ b/user_homepage_index.html
@@ -31,35 +31,39 @@
                   <li><a href="about_coupons.html">Coupons</a></li>
                   <li><a href="user_homepage_index.html"class ="current">New User</a></li>
                   <li><a href="Login_Page_index.html">Login</a></li>
-                  <li><a href="Sign_up_page_index.html">About Us</a></li>
                   <li><a href="Contact_us_index.html">Contact</a></li>
       		</ul>
       	</div>
   	</div>
   </nav>
+  <br>
+  <form action="  ">
+    <button class="btn btn-warning btn-round">Gold Level</button>
+    <input type="hidden" value="new page"/>
+  </form>
+  <form action="  ">
+    <button class="btn btn-default btn-round">Silver Level</button>
+    <input type="hidden" value="new page"/>
+  </form>
+  <form action="  ">
+    <button class="btn btn-success btn-round ">green level</button>
+    <input type="hidden" value="new page"/>
+  </form>
+  </br>
     <section class="courses">
       <article>
-        <figure>
-          <img src ="Picture folder\Green, siver, gold.png"alt="Levels"width="220"height="230"/>
-          <figcaption></figcaption>
-        </figure>
+
         <hgroup>
-          <h3>How the Coupons Work</h3>
+          <h3>How does it work</h3>
           <h4></h4>
         </hgroup>
-        <p> THIS IS FILL Dear Recipient Name,
-          To get started, click placeholder text and start typing. Double-click
-          the table cells in the footer to add your contact info (or delete the columns you don’t want).
-          Use your cover letter to show how your talent and experience will solve a
-          problem or drive results for your future employer. For example, if
-          you say you’re collaborative, give an example of how you used your
-          collaboration skills at your last internship, and then show how that
-          experience will benefit the employer.
-          It’s all about personalization. Write a cover letter that uniquely presents
-          the real you and the future impact only you can make at the company.
+        <p> KeyKash is a very user friendly application. When you allow us access to your keyboard,
+          you will automatically begin being notified of local deals near you.
+          Example: when you type in the word pizza on your messenger system or any other keyboard friendly application,
+          the word pizza will be highlighted to notify you that KeyKash has a coupon waiting for you to use.
           <br>
           <form action="  ">
-            <button class="btn btn-success ">Sign Up</button>
+            <button class="btn btn-info btn-sm">Sign Up</button>
             <input type="hidden" value="new page"/>
           </form>
         </br>
