--- a/Login_Page_index.html
+++ b/Login_Page_index.html
@@ -23,7 +23,6 @@
             <li><a href="about_coupons.html">Coupons</a></li>
             <li><a href="user_homepage_index.html">New User</a></li>
             <li><a href=""class="current">Login</a></li>
-            <li><a href="About_Us_Page_index.html">About Us</a></li>
             <li><a href="Contact_us_index.html">Contact</a></li>
 
       	</div>
@@ -40,13 +39,15 @@
           <h4></h4>
         </hgroup>
         <p>
+          <div class="login">
           <form action="">
-            <label for="Username">Username:</label>
+            <span class="label label-success">Username:</span>
             <input type="text" name="Username" required="Required" size="15" maxlength="30"/> <br/>
-            <label for="Password">Password:</label>
+            <span class="label label-success">Password</span>
             <input type="Password" name="Password" required="Required" size="15"maxlength="30"/>
-            <input type="Submit" value="Submit"/>
+            <button class="btn btn-success btn-sm btn-round">Submit</button>
          </form>
+       </div>
       </p>
       </article>
       <article><br><br></br></br>
