--- a/Contact_us_index.html
+++ b/Contact_us_index.html
@@ -1,47 +1,52 @@
 <!DOCTYPE html>
 <html>
-<link
-href="Contact_us_style.css"type="text/css"rel="stylesheet">
+<!--     Fonts and icons     -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+
+<!-- CSS Files -->
+  <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="assets/css/material-kit.css" rel="stylesheet"/>
 </head>
 <head>
   <title>KeyKash</title>
 </head>
 <body>
-  <div class="wrapper">
-    <header>
-      <h1>KeyKash
-      <h2><i>Where saving Kash is at your figer tips!</i></p></h2></h1>
-      <nav>
-        <ul>
-          <li><a href="Welcome_page_index.html">Home</a></li>
-          <li><a href="about_coupons.html">Coupons</a></li>
-          <li><a href="user_homepage_index.html">New User</a></li>
-          <li><a href="Login_Page_index.html">Login</a></li>
-          <li><a href="About_Us_Page_index.html">About Us</a></li>
-          <li><a href=""class="current">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
+  <nav class="navbar navbar-success" role="navigation">
+  	<div class="container-fluid">
+
+      		<a class="navbar-brand" href="#">KeyKash</a>
+      	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      		<ul class="nav navbar-nav">
+                  <li><a href="Welcome_page_index.html"class ="current">Home</a></li>
+                  <li><a href="about_coupons.html">Coupons</a></li>
+                  <li><a href="user_homepage_index.html">New User</a></li>
+                  <li><a href="Login_Page_index.html">Login</a></li>
+                  <li><a href="Contact_us_index.html"class ="current">Contact</a></li>
+      		</ul>
+      	</div>
+  	</div>
+  </nav>
     <section class="courses">
       <article>
         <figure>
-          <img src =""alt="KK Santos "width="220"height="130"/>
+          <img src ="D:\Documents\GitHub\Keykash1\Picture folder\15421020_1370546896310931_914312238300424439_n.jpg"alt="KK Santos "width="130"height="130"/>
           <figcaption >Katherine Santos: CEO & Founder</figcaption>
         </figure>
         <hgroup>
-          <h3>Contact</h3>
+          <h3>Contact Us</h3>
           <h4></h4>
         </hgroup>
-        <p>
-          Katherine Santos<br/>
-          promotionalpowerinc@gmail.com</p>
+        <p>Having problems with the KeyKash website or application?
+          Contact us today and will so our best to assist you in fixing the problem.</p>
       </article>
       <article>
         <hgroup>
-          <h3> <br></br></h3>
-          <h4> <br></br></h4>
+          <h3></h3>
+          <h4></h4>
         </hgroup>
-        <p></p>
+        <p> promotionalpowerinc@gmail.com </p>
       </article>
     </section>
     <footer>
