--- a/user_homepage_index.html
+++ b/user_homepage_index.html
@@ -62,7 +62,7 @@
           Example: when you type in the word pizza on your messenger system or any other keyboard friendly application,
           the word pizza will be highlighted to notify you that KeyKash has a coupon waiting for you to use.
           <br>
-          <form action="  ">
+          <form action="sign_up_page_index.html">
             <button class="btn btn-info btn-sm">Sign Up</button>
             <input type="hidden" value="new page"/>
           </form>
