--- a/sign_up_page_index.html
+++ b/sign_up_page_index.html
@@ -4,7 +4,10 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
-
+<!--   Core JS Files   -->
+	<script src="assets/js/jquery.min.js" type="text/javascript"></script>
+	<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
+	<script src="assets/js/material.min.js"></script>
 <!-- CSS Files -->
   <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
   <link href="assets/css/material-kit.css" rel="stylesheet"/>
@@ -56,9 +59,25 @@
   		<input type="text" class="form-control" placeholder="Password">
   	</div>
 
+    <div class="col-md-3 dropdown">
+    	<a href="#" class="btn btn-success dropdown-toggle" data-toggle="dropdown">
+        	Advertisement Level<b class="caret"></b>
+    	</a>
+    	<ul class=" dropdown-menu ">
+    		<li><a class="navbar navbar-warning" href="">Gold Level</a></li>
+        <li class="divider"></li>
+    		<li><a class="navbar navbar-default" href="">Silver Level</a></li>
+        <li class="divider"></li>
+    		<li><a class="navbar navbar-success"href="">Green Level</a></li>
+    	</ul>
+    </div>
+
+
+
     <footer>
       &copy; 2017 Promotional Power Inc.
     </footer>
   </div><!--.wrapper-->
   </body>
+
 </html>
