moved and updated
moved old css files to a folder
linked up the bottons to the paragraphs

--- a/user_homepage_index.html
+++ b/user_homepage_index.html
@@ -37,46 +37,67 @@
   	</div>
   </nav>
   <br>
-  <form action="  ">
+  <form action="user_homepage_index.html#gold">
     <button class="btn btn-warning btn-round">Gold Level</button>
     <input type="hidden" value="new page"/>
   </form>
-  <form action="  ">
+  <form action="user_homepage_index.html#silver">
     <button class="btn btn-default btn-round">Silver Level</button>
     <input type="hidden" value="new page"/>
   </form>
-  <form action="  ">
+  <form action="user_homepage_index.html#green">
     <button class="btn btn-success btn-round ">green level</button>
     <input type="hidden" value="new page"/>
   </form>
   </br>
     <section class="courses">
-      <article>
-
-        <hgroup>
-          <h3>How does it work</h3>
-          <h4></h4>
-        </hgroup>
+      <h3>How does it work</h3>
         <p> KeyKash is a very user friendly application. When you allow us access to your keyboard,
           you will automatically begin being notified of local deals near you.
           Example: when you type in the word pizza on your messenger system or any other keyboard friendly application,
-          the word pizza will be highlighted to notify you that KeyKash has a coupon waiting for you to use.
+          the word pizza will be highlighted to notify you that KeyKash has a coupon waiting for you to use.</p>
+        <br>
+          <h4><a name="gold">Gold level</a></h4>
+            <p>a gold level membership.... THIS IS FILL Date
+              Dear Recipient Name,To get started, click placeholder text and start typing.
+              Double-click the table cells in the footer to add your contact info (or delete the columns you don’t want).
+              Use your cover letter to show how your talent and experience will solve a problem or drive results for your future employer.
+              For example, if you say you’re collaborative, give an example of how you used your collaboration skills at your last internship,
+              and then show how that experience will benefit the employer.
+              It’s all about personalization. Write a cover letter that uniquely presents the real you and the future impact only you can make at the company.
+              Sincerely,
+              Your Name
+            </p>
+        </br>
+        <br>
+          <h4><a name="silver">Silver Level</a></h4>
+            <p>a silver level membership....THIS IS FILL Date Dear Recipient Name,
+              To get started, click placeholder text and start typing. Double-click the table cells in the footer to add your contact info (or delete the columns you don’t want).
+              Use your cover letter to show how your talent and experience will solve a problem or drive results for your future employer. For example,
+              if you say you’re collaborative, give an example of how you used your collaboration skills at your last internship, and then show how that experience will benefit the employer.
+              It’s all about personalization. Write a cover letter that uniquely presents the real you and the future impact only you can make at the company.
+              Sincerely,
+              Your Name
+            </p>
+        </br>
+        <br>
+          <h4><a name="green">Green Level</a></h4>
+            <p>a green level membership....THIS IS FILL Date Dear Recipient Name,
+              To get started, click placeholder text and start typing. Double-click the table cells in the footer to add your contact info (or delete the columns you don’t want).
+              Use your cover letter to show how your talent and experience will solve a problem or drive results for your future employer.
+              For example, if you say you’re collaborative, give an example of how you used your collaboration skills at your last internship,
+              and then show how that experience will benefit the employer.
+              It’s all about personalization. Write a cover letter that uniquely presents the real you and the future impact only you can make at the company.
+              Sincerely,
+              Your Name
+            </p>
+        </br>
           <br>
           <form action="sign_up_page_index.html">
             <button class="btn btn-info btn-sm">Sign Up</button>
             <input type="hidden" value="new page"/>
           </form>
         </br>
-        </p>
-      </article>
-      <article><br></br>
-        <hgroup>
-          <h3> </h3>
-          <h4> </h4>
-        </hgroup>
-        <p></p>
-      </article>
-    </section>
     <footer>
       &copy; 2017 Promotional Power Inc.
     </footer>
