--- a/about_coupons.html
+++ b/about_coupons.html
@@ -45,6 +45,15 @@
           the word pizza will be highlighted to notify you that KeyKash has a coupon waiting for you to use.</p>
       </article>
       <article>
+        <h3>How Does it Work</h3>
+        <p>KeyKash is a very user friendly application.
+          When you allow us access to your keyboard, you will automatically begin being notified of local deals near you.
+          Example: when you type in the word pizza on your messenger system or any other keyboard friendly application,
+          the word pizza will be highlighted to notify you that KeyKash has a coupon waiting for you to use. </P>
+          <form action="user_homepage_index.html">
+            <button class="btn btn-info btn-round">More Information</button>
+            <input type="hidden" value="new page"/>
+          </form>
       </article>
     </section>
     <footer>
