--- a/user_homepage_index.html
+++ b/user_homepage_index.html
@@ -51,11 +51,14 @@
   </form>
   </br>
     <section class="courses">
-      <h3>How does it work</h3>
-        <p> KeyKash is a very user friendly application. When you allow us access to your keyboard,
-          you will automatically begin being notified of local deals near you.
-          Example: when you type in the word pizza on your messenger system or any other keyboard friendly application,
-          the word pizza will be highlighted to notify you that KeyKash has a coupon waiting for you to use.</p>
+      <h3>KeyKash Membership levels</h3>
+        <p> We believe that KeyKash will be of great value to you, and will help you reach your goals within your planned timeline.
+          <br></br><br>KeyKash is an application that holds your company's coupons inside its internal database.
+          Anytime someone accesses their IOS keyboard and types in a word related to your coupon,
+          it will automatically notify the consumer of your deal.</br>
+          <br>We've developed a seamless transition process for the deployment of KeyKash that will allow you to post a coupon without stress or delay.
+          Our dedicated internal team will work with you to establish a specific timeline for complete deployment,
+          and will support you throughout the transition process. </br></p>
         <br>
           <h4><a name="gold">Gold level</a></h4>
             <p>a gold level membership.... THIS IS FILL Date
