--- a/user_homepage_index.html
+++ b/user_homepage_index.html
@@ -36,65 +36,50 @@
       	</div>
   	</div>
   </nav>
-  <br>
-  <form action="user_homepage_index.html#gold">
-    <button class="btn btn-warning btn-round">Gold Level</button>
-    <input type="hidden" value="new page"/>
-  </form>
-  <form action="user_homepage_index.html#silver">
-    <button class="btn btn-default btn-round">Silver Level</button>
-    <input type="hidden" value="new page"/>
-  </form>
-  <form action="user_homepage_index.html#green">
-    <button class="btn btn-success btn-round ">green level</button>
-    <input type="hidden" value="new page"/>
-  </form>
-  </br>
-    <section class="courses">
+  <section class="courses">
       <h3>KeyKash Membership levels</h3>
-        <p> We believe that KeyKash will be of great value to you, and will help you reach your goals within your planned timeline.
-          <br></br><br>KeyKash is an application that holds your company's coupons inside its internal database.
+          <p>KeyKash is an application that holds your company's coupons inside its internal database.
           Anytime someone accesses their IOS keyboard and types in a word related to your coupon,
-          it will automatically notify the consumer of your deal.</br>
-          <br>We've developed a seamless transition process for the deployment of KeyKash that will allow you to post a coupon without stress or delay.
+          it will automatically notify the consumer of your deal.<br/>
+          We've developed a seamless transition process for the deployment of KeyKash that will allow you to post a coupon without stress or delay.
           Our dedicated internal team will work with you to establish a specific timeline for complete deployment,
-          and will support you throughout the transition process. </br></p>
-        <br>
-          <h4><a name="gold">Gold level</a></h4>
-            <p>a gold level membership.... THIS IS FILL Date
-              Dear Recipient Name,To get started, click placeholder text and start typing.
-              Double-click the table cells in the footer to add your contact info (or delete the columns you don’t want).
-              Use your cover letter to show how your talent and experience will solve a problem or drive results for your future employer.
-              For example, if you say you’re collaborative, give an example of how you used your collaboration skills at your last internship,
-              and then show how that experience will benefit the employer.
-              It’s all about personalization. Write a cover letter that uniquely presents the real you and the future impact only you can make at the company.
-              Sincerely,
-              Your Name
-            </p>
-        </br>
-        <br>
-          <h4><a name="silver">Silver Level</a></h4>
-            <p>a silver level membership....THIS IS FILL Date Dear Recipient Name,
-              To get started, click placeholder text and start typing. Double-click the table cells in the footer to add your contact info (or delete the columns you don’t want).
-              Use your cover letter to show how your talent and experience will solve a problem or drive results for your future employer. For example,
-              if you say you’re collaborative, give an example of how you used your collaboration skills at your last internship, and then show how that experience will benefit the employer.
-              It’s all about personalization. Write a cover letter that uniquely presents the real you and the future impact only you can make at the company.
-              Sincerely,
-              Your Name
-            </p>
-        </br>
-        <br>
-          <h4><a name="green">Green Level</a></h4>
-            <p>a green level membership....THIS IS FILL Date Dear Recipient Name,
-              To get started, click placeholder text and start typing. Double-click the table cells in the footer to add your contact info (or delete the columns you don’t want).
-              Use your cover letter to show how your talent and experience will solve a problem or drive results for your future employer.
-              For example, if you say you’re collaborative, give an example of how you used your collaboration skills at your last internship,
-              and then show how that experience will benefit the employer.
-              It’s all about personalization. Write a cover letter that uniquely presents the real you and the future impact only you can make at the company.
-              Sincerely,
-              Your Name
-            </p>
-        </br>
+          and will support you throughout the transition process.</p>
+
+    <h3 class=" navbar navbar-success">Membership Levels</h3>
+		<p class="category"></p>
+		<div class="card-content table-responsive table-full-width">
+		<table class="table" >
+			<thead class="text-info">
+				<th><b>Plan</b></th>
+				<th><b>Description</b></th>
+				<th><b>Cost</b></th>
+			</thead>
+			<tbody>
+				<tr>
+					<td><button class="btn btn-warning btn-round"name="gold">Gold Level</button></td>
+					<td>Unlimited coupons on the KeyKash Application.<br/>
+            Approximately $20.00 a month, and a $0.10 per coupon download.<br/>
+            Free monthly analysis of coupon interaction.</td>
+					<td class="text-success"><b>$20.00 per month <br/>+ $0.10 per used coupon</b></td>
+				</tr>
+				<tr>
+					<td><button class="btn btn-default btn-round"name="silver">Silver Level</button></td>
+					<td>Up to three free coupons on the KeyKash application.<br/>
+            Fee of $10.00 a month, plus small royalty <br/>
+            of $0.10 per coupon downloaded.</td>
+					<td class="text-success"><b>$10.00 per month <br/>+ $0.10 per used coupon</b></td>
+				</tr>
+				<tr>
+					<td><button class="btn btn-success btn-round" name="green">Green Level</button></td>
+					<td>Allows for one free coupon on the KeyKash application.<br/>
+            Small royalty of $0.10 per coupon download.</td>
+					<td class="text-success"><b>$0.10 per used coupon</b></td>
+				</tr>
+		  </tbody>
+		</table>
+
+	</div>
+</div>
           <br>
           <form action="sign_up_page_index.html">
             <button class="btn btn-info btn-sm">Sign Up</button>
