--- a/add_coupon_ page_index.html
+++ b/add_coupon_ page_index.html
@@ -34,8 +34,8 @@
     <thead>
         <tr>
             <th class="text-center">#</th>
-            <th>Subject of Coupon</th>
-            <th>Type of Discont</th>
+            <th>Dipartment of Coupon</th>
+            <th> Discont Amount</th>
             <th>Date of Release</th>
             <th>Number of Issued Coupons</th>
             <th class="text-right">Actions</th>
@@ -115,32 +115,64 @@
         <a href="#" class="btn btn-success dropdown-toggle" data-toggle="dropdown">
        	Home<b class="caret"></b></a>
    	     <ul class="dropdown-menu">
-   		       <li><a href="#">Food</a></li>
-   		       <li><a href="#">Clothing</a></li>
-   		       <li><a href="#">Sporting goods</a></li>
-   		       <li><a href="#">Home</a></li>
+   		       <li><a href="#">Living room</a></li>
+   		       <li><a href="#">Bedroom</a></li>
+   		       <li><a href="#">Bathroom</a></li>
+   		       <li><a href="#">Kitchen</a></li>
+             <li><a href="#">Dining Room</a></li>
+             <li><a href="#">Office</a></li>
    	    </ul>
       </div>
       <div class="col-md-3 dropdown">
         <a href="#" class="btn btn-success dropdown-toggle" data-toggle="dropdown">
        	Sporting Goods<b class="caret"></b></a>
    	     <ul class="dropdown-menu">
-   		       <li><a href="#">Food</a></li>
-   		       <li><a href="#">Clothing</a></li>
-   		       <li><a href="#">Sporting goods</a></li>
-   		       <li><a href="#">Home</a></li>
+   		       <li><a href="#">Sports</a></li>
+   		       <li><a href="#">fishing</a></li>
+   		       <li><a href="#">Boating</a></li>
+   		       <li><a href="#">Hunting</a></li>
+             <li><a href="#">Camping</a></li>
+             <li><a href="#">Hunting</a></li>
    	    </ul>
       </div>
       <div class="col-md-3 dropdown">
         <a href="#" class="btn btn-success dropdown-toggle" data-toggle="dropdown">
        	Clothing<b class="caret"></b></a>
    	     <ul class="dropdown-menu">
-   		       <li><a href="#">Food</a></li>
-   		       <li><a href="#">Clothing</a></li>
-   		       <li><a href="#">Sporting goods</a></li>
-   		       <li><a href="#">Home</a></li>
+   		       <li><a href="#">Women</a></li>
+   		       <li><a href="#">Lingerie</a></li>
+   		       <li><a href="#">Men</a></li>
+   		       <li><a href="#">Juniors</a></li>
+             <li><a href="#">Kids</a></li>
+             <li><a href="#">Baby</a></li>
+             <li><a href="#">Shoes</a></li>
+             <li><a href="#">Handbags</a></li>
+             <li><a href="#">Jewelry</a></li>
    	    </ul>
       </div>
+
+      <br><br></br></br>
+    <fieldset>
+      <legend>Dipartment and Sub-Dipartment Selected</legend>
+      <label class="text-info"><b>Dipartment: </b><input type="text" name="dipartment"></label>
+      <label class="text-info"><b>Sub-Dipartment: </b><input type="text" name="dipartment"></label>
+    </fieldset>
+      <br></br>
+      <fieldset>
+        <legend>Coupon Information</legend>
+        <label class="text-info"><b>Name of Coupon: </b><input type="text" name="dipartment"></label>
+        <label class="text-info"><b>Amount of Discount: </b><input type="text" name="dipartment"></label>
+        <label class="text-info"><b>Date of Release: </b><input type="text" name="dipartment"></label>
+        <label class="text-info"><b>Number of Issued Coupons: </b><input type="text" name="dipartment"></label>
+      </fieldset>
+      <br></br>
+      <fieldset>
+        <legend>Trigger Words</legend>
+        <label class="text-info"><b>1: </b><input type="text" name="dipartment"></label>
+        <label class="text-info"><b>2: </b><input type="text" name="dipartment"></label>
+        <label class="text-info"><b>3: </b><input type="text" name="dipartment"></label>
+      </fieldset>
+
       <br></br>
     <footer>
     &copy; 2017 Promotional Power Inc.
