--- a/Login_Page_index.html
+++ b/Login_Page_index.html
@@ -54,7 +54,7 @@
       </article>
     </section>
     <footer>
-      &copy; 2017 Promotional Power Inc.
+      &copy; 2017 KeyKash Inc.
     </footer>
   </div><!--.wrapper-->
   </body>
