--- a/add_coupon_ page_index.html
+++ b/add_coupon_ page_index.html
@@ -183,11 +183,10 @@
        <div class="col-md-3">
        <fieldset>
          <legend>Information of Discount</legend>
-         <label class="text-info"><b>1: </b><input type="text" name="dipartment"placeholder="Percentage off"></label>
-         <label class="text-info"><b>2: </b><input type="text" name="dipartment"placeholder="Discount off"></label>
-         <label class="text-info"><b>3: </b><input type="text" name="dipartment"placeholder="'#' Items Need for Discount"></label>
-         <p class="text-info"><b> &</b></p>
-         <label class="text-info"><b>3: </b><input type="text" name="dipartment"placeholder="Amount of Discount"></label>
+         <label class="text-info"><b>1: </b><input type="text" placeholder="Percentage off"></label>
+         <label class="text-info"><b>2: </b><input type="text" placeholder="Discount off"></label>
+         <label class="text-info"><b>3.1: </b><input type="text" placeholder="'#' Items Need for Discount"></label>
+         <label class="text-info"><b>3.2: </b><input type="text" placeholder="Amount of Discount"></label>
        </fieldset>
      </div>
 
@@ -239,7 +238,7 @@
                 <td></td>
                 <td>1: <br/>2: <br/>3: <br/></td>
                 <td>
-                    <button title="Submit" class="btn btn-success btn-round btn-sm">
+                    <button title="Submit" class=" btn btn-success btn-round btn-sm">
                         <i class="material-icons">note_add</i> Submit
                     </button>
                 </td>
@@ -249,7 +248,7 @@
   </div>
       <br></br>
     <footer>
-    &copy; 2017 Promotional Power Inc.
+    &copy; 2017 KeyKash Inc.
     </footer>
   </div><!--.wrapper-->
   </body>
