--- a/sign_up_page_index.html
+++ b/sign_up_page_index.html
@@ -75,7 +75,7 @@
 
 
     <footer>
-      &copy; 2017 Promotional Power Inc.
+      &copy; 2017 KeyKash Inc.
     </footer>
   </div><!--.wrapper-->
   </body>
