--- a/user_homepage_index.html
+++ b/user_homepage_index.html
@@ -82,12 +82,12 @@
 </div>
           <br>
           <form action="sign_up_page_index.html">
-            <button class="btn btn-info btn-sm">Sign Up</button>
+            <button class="btn btn-info btn-round btn-sm ">Sign Up</button>
             <input type="hidden" value="new page"/>
           </form>
         </br>
     <footer>
-      &copy; 2017 Promotional Power Inc.
+      &copy; 2017 KeyKash Inc.
     </footer>
   </div><!--.wrapper-->
   </body>
