--- a/sign_up_page_index.html
+++ b/sign_up_page_index.html
@@ -57,23 +57,23 @@
   			<i class="material-icons">security</i>
   		</span>
   		<input type="text" class="form-control" placeholder="Password">
-  	</div>
+  	</div><br/>
 
-    <div class="col-md-3 dropdown">
-    	<a href="#" class="btn btn-success dropdown-toggle" data-toggle="dropdown">
-        	Advertisement Level<b class="caret"></b>
-    	</a>
-    	<ul class=" dropdown-menu ">
-    		<li><a class="navbar navbar-warning" href="">Gold Level</a></li>
-        <li class="divider"></li>
-    		<li><a class="navbar navbar-default" href="">Silver Level</a></li>
-        <li class="divider"></li>
-    		<li><a class="navbar navbar-success"href="">Green Level</a></li>
-    	</ul>
-    </div>
-      <br><br></br></br>
-
-
+      <legend>Chose Your Membership Level</legend>
+      <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+  <input type="hidden" name="cmd" value="_s-xclick">
+  <input type="hidden" name="hosted_button_id" value="KARQFGZS9S7UE">
+  <table>
+  <tr><td><input type="hidden" name="on0" value=""></td></tr><tr><td><select name="os0">
+  	<option value="Green Level">Green Level : $5.00 USD - monthly</option>
+  	<option value="Silver Level">Silver Level : $10.00 USD - monthly</option>
+  	<option value="Gold Level">Gold Level : $20.00 USD - monthly</option>
+  </select> </td></tr>
+  </table>
+  <input type="hidden" name="currency_code" value="USD">
+  <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribeCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+  <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+  </form>
     <footer>
       &copy; 2017KeyKash Inc.
     </footer>
