updated & made new page
updated links on add_coupon_page
made the Redemption_page

--- a/add_coupon_ page_index.html
+++ b/add_coupon_ page_index.html
@@ -23,7 +23,7 @@
       	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       		<ul class="nav navbar-nav">
                   <li><a href=""class="current">Add Coupons</a></li>
-                  <li><a href="">Redeem Coupons</a></li>
+                  <li><a href="Redemption_page_index.html">Redeem Coupons</a></li>
                   <li><a href="">Gold Level Members</a></li>
       		</ul>
       	</div>
